# bazel-code-quality

./: .bazelrc  .gitignore  BUILD.bazel  LICENSE  MODULE.bazel  WORKSPACE.bazel  install.sh  pyproject.toml
.github/workflows/: check-merge.yaml
rules_python/: BUILD.bazel  README.md  def.bzl  defs.bzl
rules_python/ruff/: def.bzl  extensions.bzl  repository.bzl
rules_python/tests/: BUILD.bazel  calculator.py  math.py  math_test.py
toolchains/cpp/: BUILD.bazel
